joint model that can normally run

--- a/dataUtils.ipynb
+++ b/dataUtils.ipynb
@@ -194,17 +194,8 @@
     "    # tf.flags.DEFINE_integer(\"max_seq_len\", max(data_len), \"Max length of sequence (default: 300)\")\n",
     "    # tf.flags.DEFINE_integer(\"max_sent_len\", max_sent, \"Max length of sentence (default: 300)\")\n",
     "    eval_flag = int(len(data_ID) / 4) * 3\n",
-    "    print(\"{} data loaded\".format(len(data)))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import keras\n",
-    "\n",
+    "    print(\"{} data loaded\".format(len(data)))\n",
+    "    \n",
     "def Word2IDs(word):\n",
     "    rst = [charsVocab.get(char) for char in word]\n",
     "    for i in range(len(rst)):\n",
@@ -215,6 +206,8 @@
     "    return rst\n",
     "\n",
     "def get_df_batch(start, new_data_len=[]):\n",
+    "    data_x = np.zeros([FLAGS.batch_size, FLAGS.max_seq_len, FLAGS.max_sent_len, FLAGS.max_char_num], \n",
+    "                      dtype=np.int32)\n",
     "    m_data_y = np.zeros([FLAGS.batch_size, 2], dtype=np.int32)\n",
     "    m_data_len = np.zeros([FLAGS.batch_size], dtype=np.int32)\n",
     "    if len(new_data_len) > 0:\n",
@@ -225,38 +218,29 @@
     "    if mts >= len(data_ID):\n",
     "        mts = mts % len(data_ID)\n",
     "    \n",
-    "    list_batch = []\n",
     "    for i in range(FLAGS.batch_size):\n",
     "        m_data_y[i] = data_y[mts]\n",
     "        m_data_len[i] = t_data_len[mts]\n",
-    "        list_seq = []\n",
     "        for j in range(t_data_len[mts]):\n",
     "            t_words = data[data_ID[mts]]['text'][j]\n",
     "            sentence = list(map(lambda word:Word2IDs(word), t_words))\n",
     "            sent_arr = keras.preprocessing.sequence.pad_sequences(\n",
     "                                                    sentence, \n",
-    "                                                    maxlen= 21, \n",
+    "                                                    maxlen= FLAGS.max_char_num, \n",
     "                                                    dtype='int32', \n",
     "                                                    padding='post', \n",
     "                                                    truncating='post',\n",
     "                                                    value=0.0\n",
-    "                        ).tolist()\n",
-    "            list_seq.append(sent_arr)\n",
-    "        list_batch.append(list_seq)\n",
+    "                        )\n",
+    "            data_x[i][j][:len(sentence)]=sent_arr\n",
     "        mts += 1\n",
     "        if mts >= len(data_ID): # read data looply\n",
     "            mts = mts % len(data_ID)\n",
     "    data_x = np.array(list_batch)\n",
-    "    return data_x, m_data_len, m_data_y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return data_x, m_data_len, m_data_y\n",
+    "\n",
     "def get_rl_batch(ids, seq_states, stop_states, counter_id, start_id, total_data):\n",
+    "    input_x = np.zeros([FLAGS.batch_size, FLAGS.max_sent_len, FLAGS.max_char_num], dtype=np.float32)\n",
     "    input_y = np.zeros([FLAGS.batch_size, FLAGS.class_num], dtype=np.float32)\n",
     "    miss_vec = 0\n",
     "    total_data = len(data_len)\n",
@@ -272,7 +256,16 @@
     "                print(ids[i], seq_states[i])\n",
     "                t_words = []\n",
     "            if len(t_words) != 0:\n",
-    "                \n",
+    "                sentence = list(map(lambda word:Word2IDs(word), t_words))\n",
+    "                sent_arr = keras.preprocessing.sequence.pad_sequences(\n",
+    "                                                        sentence, \n",
+    "                                                        maxlen= FLAGS.max_char_num, \n",
+    "                                                        dtype='int32', \n",
+    "                                                        padding='post', \n",
+    "                                                        truncating='post',\n",
+    "                                                        value=0.0\n",
+    "                            )\n",
+    "                input_x[i][:len(sentence)] = sent_arr\n",
     "            input_y[i] = data_y[ids[i]]\n",
     "            counter_id += 1\n",
     "            counter_id = counter_id % total_data\n",
@@ -286,12 +279,13 @@
     "                sentence = list(map(lambda word:Word2IDs(word), t_words))\n",
     "                sent_arr = keras.preprocessing.sequence.pad_sequences(\n",
     "                                                        sentence, \n",
-    "                                                        maxlen= 21, \n",
+    "                                                        maxlen= FLAGS.max_char_num, \n",
     "                                                        dtype='int32', \n",
     "                                                        padding='post', \n",
     "                                                        truncating='post',\n",
     "                                                        value=0.0\n",
-    "                            ).tolist()\n",
+    "                            )\n",
+    "                input_x[i][:len(sentence)] = sent_arr\n",
     "            input_y[i] = data_y[ids[i]]\n",
     "        # point to the next sequence\n",
     "        seq_states[i] += 1\n",
