修改读数据的方式，在单词的前后增加大括号，底层的char_embedding模型还是使用lstm_char_cnn

--- a/MTL_RDM.ipynb
+++ b/MTL_RDM.ipynb
@@ -10,33 +10,9 @@
      "output_type": "stream",
      "text": [
       "WARNING: Logging before flag parsing goes to stderr.\n",
-      "W0901 12:17:45.989879 139700702275392 deprecation_wrapper.py:119] From /home/hadoop/ERD/model.py:6: The name tf.losses.Reduction is deprecated. Please use tf.compat.v1.losses.Reduction instead.\n",
+      "W0902 17:12:56.365056 139830439622464 deprecation_wrapper.py:119] From /home/hadoop/ERD/model.py:6: The name tf.losses.Reduction is deprecated. Please use tf.compat.v1.losses.Reduction instead.\n",
       "\n",
       "Using TensorFlow backend.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "max_sent: 31 ,  max_seq_len: 101\n",
-      "5802 data loaded\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "I0901 12:18:02.012879 139700702275392 logger.py:24] (300, 64, 101, 31, 2, 2)\n",
-      "I0901 12:18:02.013772 139700702275392 logger.py:24] 2019-09-01 12:18:02 Data loaded.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "300 64 101 31 2 2\n",
-      "2019-09-01 12:18:02 Data loaded.\n"
      ]
     }
    ],
@@ -58,8 +34,25 @@
     "tf.logging.set_verbosity(tf.logging.ERROR)\n",
     "\n",
     "\n",
-    "logger = MyLogger(\"RDMTrain\")\n",
-    "\n",
+    "logger = MyLogger(\"RDMTrain\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max_sent: 31 ,  max_seq_len: 101\n",
+      "5802 data loaded\n"
+     ]
+    }
+   ],
+   "source": [
+    "# load_data(FLAGS.data_file_path)\n",
     "# load twitter data\n",
     "# load_data(FLAGS.data_file_path)\n",
     "load_data_fast()\n",
@@ -98,13 +91,20 @@
     "                        FLAGS.class_num, FLAGS.action_num)  )\n",
     "\n",
     "print(get_curtime() + \" Data loaded.\")\n",
-    "logger.info(get_curtime() + \" Data loaded.\")\n",
-    "\n",
+    "logger.info(get_curtime() + \" Data loaded.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# # save the Twitter data\n",
     "# data = get_data()\n",
     "# with open('data/data_dict.txt', 'wb') as handle:\n",
     "#     pickle.dump(data, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
-    "\n",
+    "    \n",
     "# # save the PTB data\n",
     "# with open('data/char_tensors.txt', 'wb') as handle:\n",
     "#     pickle.dump(char_tensors, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
@@ -129,10 +129,50 @@
     "#     pickle.dump(sentiReader.test_data, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
     "\n",
     "# with open('data/senti_test_label.pickle', 'wb') as handle:\n",
-    "#     pickle.dump(sentiReader.test_label, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
-    "\n",
-    "\n",
-    "\n",
+    "#     pickle.dump(sentiReader.test_label, handle, protocol=pickle.HIGHEST_PROTOCOL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W0901 12:17:45.989879 139700702275392 deprecation_wrapper.py:119] From /home/hadoop/ERD/model.py:6: The name tf.losses.Reduction is deprecated. Please use tf.compat.v1.losses.Reduction instead.\n",
+      "\n",
+      "Using TensorFlow backend.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max_sent: 31 ,  max_seq_len: 101\n",
+      "5802 data loaded\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "I0901 12:18:02.012879 139700702275392 logger.py:24] (300, 64, 101, 31, 2, 2)\n",
+      "I0901 12:18:02.013772 139700702275392 logger.py:24] 2019-09-01 12:18:02 Data loaded.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "300 64 101 31 2 2\n",
+      "2019-09-01 12:18:02 Data loaded.\n"
+     ]
+    }
+   ],
+   "source": [
     "from model import adict\n",
     "\n",
     "\n",
