--- a/MTL_SentiTrain.ipynb
+++ b/MTL_SentiTrain.ipynb
@@ -190,19 +190,20 @@
     "    senti_rst = classifier(senti_features)\n",
     "    sent_scores = tf.nn.softmax(senti_rst, axis=1)\n",
     "    sent_pred = tf.argmax(sent_scores, 1, name=\"predictions\")\n",
-    "    sent_loss = tf.losses.softmax_cross_entropy(\n",
-    "                        sent_y,\n",
-    "                        senti_rst,\n",
-    "                        weights=1.0,\n",
-    "                        label_smoothing=0,\n",
-    "                        scope=None,\n",
-    "                        loss_collection=tf.GraphKeys.LOSSES,\n",
-    "                        reduction=Reduction.SUM_BY_NONZERO_WEIGHTS\n",
-    "                    )\n",
+    "#     sent_loss = tf.losses.softmax_cross_entropy(\n",
+    "#                         sent_y,\n",
+    "#                         senti_rst,\n",
+    "#                         weights=1.0,\n",
+    "#                         label_smoothing=0,\n",
+    "#                         scope=None,\n",
+    "#                         loss_collection=tf.GraphKeys.LOSSES,\n",
+    "#                         reduction=Reduction.SUM_BY_NONZERO_WEIGHTS\n",
+    "#                     )\n",
+    "    sent_loss = tf.reduce_mean((sent_y-senti_rst)*(sent_y-senti_rst))\n",
     "    sent_correct_predictions = tf.equal(sent_pred, tf.argmax(sent_y, 1))\n",
     "    sent_acc = tf.reduce_mean(tf.cast(sent_correct_predictions, \"float\"), name=\"accuracy\")\n",
     "    sent_global_step = tf.Variable(0, name=\"global_step\", trainable=False)\n",
-    "    sent_train_op = tf.train.AdamOptimizer(0.1).minimize(sent_loss, sent_global_step)        \n",
+    "    sent_train_op = tf.train.AdagradOptimizer(0.1).minimize(sent_loss, sent_global_step)        \n",
     "    return adict(\n",
     "                # dropout_keep_prob = self.dropout_keep_prob,\n",
     "                sent_x = sent_x,\n",
@@ -747,7 +748,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
