可以运行的bert-subjobj-rdm模型

--- a/dataUtils.ipynb
+++ b/dataUtils.ipynb
@@ -20,19 +20,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_data(data_path):\n",
-    "    # get data files path\n",
-    "    data = {}\n",
+    "import torch.nn.utils.rnn as rnn_utils"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = []\n",
+    "data = {}\n",
+    "data_ID = []\n",
+    "data_len = []\n",
+    "data_y = []\n",
+    "reward_counter = 0\n",
+    "eval_flag = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_data():\n",
+    "    global data\n",
+    "    return data\n",
+    "\n",
+    "def get_data_ID():\n",
+    "    global data_ID\n",
+    "    return data_ID\n",
+    "\n",
+    "def get_data_len():\n",
+    "    global data_len\n",
+    "    return data_len\n",
+    "\n",
+    "def get_curtime():\n",
+    "    return time.strftime('%Y-%m-%d %H:%M:%S',time.localtime(time.time()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def list_files(data_path):\n",
     "    files = []\n",
-    "    data_ID = []\n",
-    "    data_len = []\n",
-    "    list_files(data_path) #load all filepath to files\n",
+    "    fs = os.listdir(data_path)\n",
+    "    for f1 in fs:\n",
+    "        tmp_path = os.path.join(data_path, f1)\n",
+    "        if not os.path.isdir(tmp_path):\n",
+    "            if tmp_path.split('.')[-1] == 'json':\n",
+    "                files.append(tmp_path)\n",
+    "        else:\n",
+    "            files.extend(list_files(tmp_path))\n",
+    "    return files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def data_process(file_path):\n",
+    "    ret = {}\n",
+    "    ss = file_path.split(\"/\")\n",
+    "    data = json.load(open(file_path, mode=\"r\", encoding=\"utf-8\"))\n",
+    "    # 'Wed Jan 07 11:14:08 +0000 2015'\n",
+    "    # print(\"SS:\", ss)\n",
+    "    ret[ss[6]] = {'label': ss[5], 'text': [data['text'].lower()], 'created_at': [str2timestamp(data['created_at'])]}\n",
+    "    return ret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def str2timestamp(str_time):\n",
+    "    month = {'Jan': '01', 'Feb': '02', 'Mar': '03', 'Apr': '04',\n",
+    "             'May': '05', 'Jun': '06', 'Jul': '07', 'Aug': '08',\n",
+    "             'Sep': '09', 'Oct': '10', 'Nov': '11', 'Dec': '12'}\n",
+    "    ss = str_time.split(' ')\n",
+    "    m_time = ss[5] + \"-\" + month[ss[1]] + '-' + ss[2] + ' ' + ss[3]\n",
+    "    d = datetime.datetime.strptime(m_time, \"%Y-%m-%d %H:%M:%S\")\n",
+    "    t = d.timetuple()\n",
+    "    timeStamp = int(time.mktime(t))\n",
+    "    return timeStamp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sortTempList(temp_list):\n",
+    "    time = np.array([item[0] for item in temp_list])\n",
+    "    posts = np.array([item[1] for item in temp_list])\n",
+    "    idxs = time.argsort().tolist()\n",
+    "    rst = [[t, p] for (t, p) in zip(time[idxs], posts[idxs])]\n",
+    "    del time, posts\n",
+    "    return rst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_data(data_path, FLAGS):\n",
+    "    global data, data_ID, data_len, data_y, eval_flag\n",
+    "    files = list_files(data_path) #load all filepath to files\n",
     "    max_sent = 0\n",
-    "    # load data to json\n",
+    "    \n",
     "    for file in files:\n",
     "        td = data_process(file) # read out the information from json file, and organized it as {dataID:{'key':val}}\n",
     "        for key in td.keys(): # use temporary data to organize the final whole data\n",
@@ -41,6 +151,7 @@
     "                data[key]['created_at'].append(td[key]['created_at'][0])\n",
     "            else:\n",
     "                data[key] = td[key]\n",
+    "\n",
     "    # convert to my data style\n",
     "    for key, value in data.items():\n",
     "        temp_list = []\n",
@@ -64,12 +175,9 @@
     "            last = i\n",
     "        # keep the last one\n",
     "        if len(ttext) > 0:\n",
-    "            words = list( filter(lambda s: len(s)>0, [transIrregularWord(word) for word in re.split('([,\\n ]+)', ttext.strip() )]) )\n",
-    "#             words = list(filter(lambda x:x!=' ' and x!='', re.split('([,\\n .]+)', ttext.strip()) ))\n",
-    "            if len(words) > max_sent:\n",
-    "                max_sent = len(words)\n",
-    "            data[key]['text'].append(words)\n",
+    "            data[key]['text'].append(ttext)\n",
     "            data[key]['created_at'].append(temp_list[last][0])\n",
+    "\n",
     "    for key in data.keys():\n",
     "        data_ID.append(key)\n",
     "    data_ID = random.sample(data_ID, len(data_ID)) #shuffle the data id\n",
@@ -79,9 +187,256 @@
     "            data_y.append([1.0, 0.0])\n",
     "        else:\n",
     "            data_y.append([0.0, 1.0])\n",
+    "    eval_flag = int(len(data_ID) / 4) * 3\n",
+    "    print(\"{} data loaded\".format(len(data)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_data_fast():\n",
+    "    global data, data_ID, data_len, data_y, eval_flag\n",
+    "    with open(\"data/data_dict.txt\", \"rb\") as handle:\n",
+    "        data = pickle.load(handle)\n",
+    "    data_ID = np.load(\"data/data_ID.npy\").tolist()\n",
+    "    data_len = np.load(\"data/data_len.npy\").tolist()\n",
+    "    data_y = np.load(\"data/data_y.npy\").tolist()\n",
+    "    max_sent = max( map(lambda value: max(map(lambda txt_list: len(txt_list), value['text']) ), list(data.values()) ) )\n",
     "    print(\"max_sent:\", max_sent, \",  max_seq_len:\", max(data_len))\n",
     "    eval_flag = int(len(data_ID) / 4) * 3\n",
-    "    print(\"{} data loaded\".format(len(data)))\n"
+    "    print(\"{} data loaded\".format(len(data)))    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"config.json\", \"r\") as cr:\n",
+    "    dic = json.load(cr)\n",
+    "\n",
+    "class adict(dict):\n",
+    "    ''' Attribute dictionary - a convenience data structure, similar to SimpleNamespace in python 3.3\n",
+    "        One can use attributes to read/write dictionary content.\n",
+    "    '''\n",
+    "    def __init__(self, *av, **kav):\n",
+    "        dict.__init__(self, *av, **kav)\n",
+    "        self.__dict__ = self\n",
+    "\n",
+    "FLAGS = adict(dic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save the Twitter data\n",
+    "# with open('data/data_dict.txt', 'wb') as handle:\n",
+    "#     pickle.dump(data, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "# idxs = [ idx if item>6 else idx - len(data_len) for (idx, item) in enumerate(data_len)]\n",
+    "# saved_idxs = list(filter(lambda x: x > 0, idxs))\n",
+    "# np.save(\"data/data_ID.npy\", np.array(data_ID)[saved_idxs])\n",
+    "# np.save(\"data/data_len.npy\", np.array(data_len)[saved_idxs])\n",
+    "# np.save(\"data/data_y.npy\", np.array(data_y)[saved_idxs])\n",
+    "\n",
+    "    \n",
+    "# # save the PTB data\n",
+    "# with open('data/char_tensors.txt', 'wb') as handle:\n",
+    "#     pickle.dump(char_tensors, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "\n",
+    "# with open('data/word_tensors.txt', 'wb') as handle:\n",
+    "#     pickle.dump(word_tensors, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "    \n",
+    "# with open('data/char_vocab.txt', 'wb') as handle:\n",
+    "#     pickle.dump(char_vocab, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "\n",
+    "# with open('data/word_vocab.txt', 'wb') as handle:\n",
+    "#     pickle.dump(word_vocab, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "\n",
+    "# save the senti data\n",
+    "# with open('data/senti_train_data.pickle', 'wb') as handle:\n",
+    "#     pickle.dump(sentiReader.train_data, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "\n",
+    "# with open('data/senti_train_label.pickle', 'wb') as handle:\n",
+    "#     pickle.dump(sentiReader.train_label, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "    \n",
+    "# with open('data/senti_test_data.pickle', 'wb') as handle:\n",
+    "#     pickle.dump(sentiReader.test_data, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "\n",
+    "# with open('data/senti_test_label.pickle', 'wb') as handle:\n",
+    "#     pickle.dump(sentiReader.test_label, handle, protocol=pickle.HIGHEST_PROTOCOL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_df_batch_for_bert(start, batchsize, new_data_len=[], tokenizer=None):\n",
+    "#     data_x = np.zeros([batchsize, FLAGS.max_seq_len, FLAGS.max_sent_len, FLAGS.bert_embedding], \n",
+    "#                       dtype=np.int32)\n",
+    "    m_data_y = np.zeros([batchsize, 2], dtype=np.int32)\n",
+    "    m_data_len = np.zeros([batchsize], dtype=np.int32)\n",
+    "    data_x = [] #[batchsize, seq_len, sent_len]\n",
+    "    if len(new_data_len) > 0:\n",
+    "        t_data_len = new_data_len\n",
+    "    else:\n",
+    "        t_data_len = data_len\n",
+    "    mts = start * batchsize\n",
+    "    if mts >= len(data_ID):\n",
+    "        mts = mts % len(data_ID)\n",
+    "    \n",
+    "    for i in range(batchsize):\n",
+    "        m_data_y[i] = data_y[mts]\n",
+    "        m_data_len[i] = t_data_len[mts]\n",
+    "        seq_x = [\n",
+    "            tokenizer.encode(\n",
+    "                data[data_ID[mts]]['text'][j],\n",
+    "                add_special_tokens=True\n",
+    "            )\n",
+    "            for j in range(t_data_len[mts])\n",
+    "        ]\n",
+    "        data_x.append(seq_x)\n",
+    "        mts += 1\n",
+    "        if mts >= len(data_ID): # read data looply\n",
+    "            mts = mts % len(data_ID)\n",
+    "    return data_x, m_data_len, m_data_y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_rl_batch(ids, seq_states, stop_states, counter_id, start_id, FLAGS, tokenizer=None):\n",
+    "#     input_x = np.zeros([FLAGS.batch_size, FLAGS.max_sent_len, FLAGS.max_char_num], dtype=np.float32)\n",
+    "    input_x = []  # [batch_size, sent_len]\n",
+    "    input_y = np.zeros([FLAGS.batch_size, FLAGS.class_num], dtype=np.float32)\n",
+    "    assert(len(ids)==FLAGS.batch_size)\n",
+    "    miss_vec = 0\n",
+    "    total_data = len(data_len)\n",
+    "    for i in range(FLAGS.batch_size):\n",
+    "        # seq_states:records the id of a sentence in a sequence\n",
+    "        # stop_states: records whether the sentence is judged by the program\n",
+    "        if stop_states[i] == 1 or seq_states[i] >= data_len[ids[i]]: \n",
+    "            ids[i] = counter_id + start_id\n",
+    "            seq_states[i] = 0\n",
+    "            try:\n",
+    "                input_x.append(\n",
+    "                    tokenizer.encode(\n",
+    "                        data[data_ID[mts]]['text'][seq_states[i]], \n",
+    "                        add_special_tokens=True\n",
+    "                    )\n",
+    "                )\n",
+    "            except:\n",
+    "                print(\"ids and seq_states:\", ids[i], seq_states[i])\n",
+    "                raise\n",
+    "            input_y[i] = data_y[ids[i]]\n",
+    "            counter_id += 1\n",
+    "            counter_id = counter_id % total_data\n",
+    "        else:\n",
+    "            try:\n",
+    "                input_x.append(\n",
+    "                    tokenizer.encode(\n",
+    "                        data[data_ID[mts]]['text'][seq_states[i]], \n",
+    "                        add_special_tokens=True\n",
+    "                    )\n",
+    "                )\n",
+    "            except:\n",
+    "                print(\"ids and seq_states:\", ids[i], seq_states[i])\n",
+    "                raise\n",
+    "            input_y[i] = data_y[ids[i]]\n",
+    "        # point to the next sequence\n",
+    "        seq_states[i] += 1\n",
+    "    return input_x, input_y, ids, seq_states, counter_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_reward(isStop, ss, pys, ids, seq_ids):\n",
+    "    global reward_counter\n",
+    "    reward = np.zeros([len(isStop)], dtype=np.float32)\n",
+    "    for i in range(len(isStop)):\n",
+    "        if isStop[i] == 1:\n",
+    "            if np.argmax(pys[ids[i]][seq_ids[i]-1]) == np.argmax(data_y[ids[i]]):\n",
+    "                reward_counter += 1 # more number of correct prediction, more rewards\n",
+    "                r = 1 + FLAGS.reward_rate * math.log(reward_counter)\n",
+    "                reward[i] = r   \n",
+    "            else:\n",
+    "                reward[i] = -100\n",
+    "        else:\n",
+    "            reward[i] = -0.01 + 0.99 * max(ss[i])\n",
+    "    return reward"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_new_len(sess, mm):\n",
+    "    new_x_len = np.zeros([len(data_ID)], dtype=np.int32)\n",
+    "    for i in range(len(data_ID)):\n",
+    "        e_state = np.zeros([1, FLAGS.hidden_dim], dtype=np.float32)\n",
+    "        # e_state = sess.run(mm.df_state, feed_dict={mm.init_states: init_state})\n",
+    "        for j in range(data_len[i]):\n",
+    "            t_words = data[data_ID[i]]['text'][j]\n",
+    "            e_x = np.zeros([1, FLAGS.max_sent_len, FLAGS.embedding_dim], dtype=np.float32)\n",
+    "            if len(t_words) != 0:\n",
+    "                e_x[0][:len(t_words)] = c2vec.vectorize_words(t_words)\n",
+    "            batch_dic = {mm.rl_state: e_state, mm.rl_input: e_x, mm.dropout_keep_prob: 1.0}\n",
+    "            e_isStop, mNewState = sess.run([mm.isStop, mm.rl_new_state], batch_dic)\n",
+    "            e_state = mNewState\n",
+    "\n",
+    "            if e_isStop == 1:\n",
+    "                new_x_len[i] = j+1\n",
+    "                break\n",
+    "        if new_x_len[i] == 0 or new_x_len[i] > data_len[i]:\n",
+    "            new_x_len[i] = data_len[i]\n",
+    "            \n",
+    "    return new_x_len"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_RL_Train_batch(D, FLAGS):\n",
+    "    s_state = np.zeros([FLAGS.batch_size, FLAGS.hidden_dim], dtype=np.float32) \n",
+    "    s_x = np.zeros([FLAGS.batch_size, FLAGS.max_sent_len, FLAGS.embedding_dim], dtype=np.float32)\n",
+    "    s_isStop = np.zeros([FLAGS.batch_size, FLAGS.action_num], dtype=np.float32)\n",
+    "    s_rw = np.zeros([FLAGS.batch_size], dtype=np.float32)\n",
+    "    m_batch = random.sample(D, FLAGS.batch_size)\n",
+    "    for i in range(FLAGS.batch_size):\n",
+    "        s_state[i] = m_batch[i][0]\n",
+    "        s_x[i] = m_batch[i][1]\n",
+    "        s_isStop[i][m_batch[i][2]] = 1\n",
+    "        s_rw[i] = m_batch[i][3]\n",
+    "    return s_state, s_x, s_isStop, s_rw"
    ]
   }
  ],
