持续学习的ipynb框架

--- a/torch_RDM_Model.ipynb
+++ b/torch_RDM_Model.ipynb
@@ -11286,7 +11286,79 @@
       "step 93| pos_acc/pos_cnt = 0.000/  1,                neg_acc/neg_cnt = 1.000/  4                 pos_pred/all_pred =  0/ 5\n",
       "step 94| pos_acc/pos_cnt = 1.000/  5,                neg_acc/neg_cnt = 0.000/  0                 pos_pred/all_pred =  5/ 5\n",
       "step 95| pos_acc/pos_cnt = 1.000/  3,                neg_acc/neg_cnt = 0.000/  2                 pos_pred/all_pred =  5/ 5\n",
-      "step 96| pos_acc/pos_cnt = 1.000/  3,                neg_acc/neg_cnt = 0.000/  2                 pos_pred/all_pred =  5/ 5\n"
+      "step 96| pos_acc/pos_cnt = 1.000/  3,                neg_acc/neg_cnt = 0.000/  2                 pos_pred/all_pred =  5/ 5\n",
+      "step 97| pos_acc/pos_cnt = 0.000/  2,                neg_acc/neg_cnt = 1.000/  3                 pos_pred/all_pred =  0/ 5\n",
+      "step 98| pos_acc/pos_cnt = 1.000/  3,                neg_acc/neg_cnt = 0.000/  2                 pos_pred/all_pred =  5/ 5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:RDMLogger: 99 | 1000 , train_loss/accuracy = 1.72097528/0.7000000\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step 99| pos_acc/pos_cnt = 0.000/  2,                neg_acc/neg_cnt = 1.000/  3                 pos_pred/all_pred =  0/ 5\n",
+      " 99 | 1000 , train_loss/accuracy = 1.72097528/0.7000000\n",
+      "step 100| pos_acc/pos_cnt = 1.000/  2,                neg_acc/neg_cnt = 0.000/  3                 pos_pred/all_pred =  5/ 5\n",
+      "step 101| pos_acc/pos_cnt = 0.000/  1,                neg_acc/neg_cnt = 1.000/  4                 pos_pred/all_pred =  0/ 5\n",
+      "step 102| pos_acc/pos_cnt = 0.000/  3,                neg_acc/neg_cnt = 1.000/  2                 pos_pred/all_pred =  0/ 5\n",
+      "step 103| pos_acc/pos_cnt = 1.000/  4,                neg_acc/neg_cnt = 0.000/  1                 pos_pred/all_pred =  5/ 5\n",
+      "step 104| pos_acc/pos_cnt = 1.000/  2,                neg_acc/neg_cnt = 0.000/  3                 pos_pred/all_pred =  5/ 5\n",
+      "step 105| pos_acc/pos_cnt = 0.000/  4,                neg_acc/neg_cnt = 1.000/  1                 pos_pred/all_pred =  0/ 5\n",
+      "step 106| pos_acc/pos_cnt = 1.000/  2,                neg_acc/neg_cnt = 0.000/  3                 pos_pred/all_pred =  5/ 5\n",
+      "step 107| pos_acc/pos_cnt = 0.000/  4,                neg_acc/neg_cnt = 1.000/  1                 pos_pred/all_pred =  0/ 5\n",
+      "step 108| pos_acc/pos_cnt = 1.000/  3,                neg_acc/neg_cnt = 0.000/  2                 pos_pred/all_pred =  5/ 5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:RDMLogger:109 | 1000 , train_loss/accuracy = 3.80147719/0.5200000\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step 109| pos_acc/pos_cnt = 1.000/  5,                neg_acc/neg_cnt = 0.000/  0                 pos_pred/all_pred =  5/ 5\n",
+      "109 | 1000 , train_loss/accuracy = 3.80147719/0.5200000\n",
+      "step 110| pos_acc/pos_cnt = 1.000/  3,                neg_acc/neg_cnt = 0.000/  2                 pos_pred/all_pred =  5/ 5\n",
+      "step 111| pos_acc/pos_cnt = 0.000/  4,                neg_acc/neg_cnt = 1.000/  1                 pos_pred/all_pred =  0/ 5\n",
+      "step 112| pos_acc/pos_cnt = 1.000/  5,                neg_acc/neg_cnt = 0.000/  0                 pos_pred/all_pred =  5/ 5\n",
+      "step 113| pos_acc/pos_cnt = 1.000/  4,                neg_acc/neg_cnt = 0.000/  1                 pos_pred/all_pred =  5/ 5\n",
+      "step 114| pos_acc/pos_cnt = 1.000/  3,                neg_acc/neg_cnt = 0.000/  2                 pos_pred/all_pred =  5/ 5\n",
+      "step 115| pos_acc/pos_cnt = 1.000/  2,                neg_acc/neg_cnt = 0.000/  3                 pos_pred/all_pred =  5/ 5\n",
+      "step 116| pos_acc/pos_cnt = 0.000/  2,                neg_acc/neg_cnt = 1.000/  3                 pos_pred/all_pred =  0/ 5\n",
+      "step 117| pos_acc/pos_cnt = 1.000/  4,                neg_acc/neg_cnt = 0.000/  1                 pos_pred/all_pred =  5/ 5\n",
+      "step 118| pos_acc/pos_cnt = 1.000/  3,                neg_acc/neg_cnt = 0.000/  2                 pos_pred/all_pred =  5/ 5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:RDMLogger:119 | 1000 , train_loss/accuracy = 1.78746665/0.6000000\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step 119| pos_acc/pos_cnt = 0.000/  3,                neg_acc/neg_cnt = 1.000/  2                 pos_pred/all_pred =  0/ 5\n",
+      "119 | 1000 , train_loss/accuracy = 1.78746665/0.6000000\n",
+      "step 120| pos_acc/pos_cnt = 1.000/  4,                neg_acc/neg_cnt = 0.000/  1                 pos_pred/all_pred =  5/ 5\n",
+      "step 121| pos_acc/pos_cnt = 1.000/  3,                neg_acc/neg_cnt = 0.000/  2                 pos_pred/all_pred =  5/ 5\n",
+      "step 122| pos_acc/pos_cnt = 0.000/  1,                neg_acc/neg_cnt = 1.000/  4                 pos_pred/all_pred =  0/ 5\n",
+      "step 123| pos_acc/pos_cnt = 0.000/  4,                neg_acc/neg_cnt = 1.000/  1                 pos_pred/all_pred =  0/ 5\n",
+      "step 124| pos_acc/pos_cnt = 1.000/  3,                neg_acc/neg_cnt = 0.000/  2                 pos_pred/all_pred =  5/ 5\n",
+      "step 125| pos_acc/pos_cnt = 1.000/  5,                neg_acc/neg_cnt = 0.000/  0                 pos_pred/all_pred =  5/ 5\n",
+      "step 126| pos_acc/pos_cnt = 1.000/  4,                neg_acc/neg_cnt = 0.000/  1                 pos_pred/all_pred =  5/ 5\n"
      ]
     }
    ],
